# sentify

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/app/: flask_app.py
src/app/static/css/: index.css
src/app/static/js/: index.js
src/app/templates/: _macros.html  index.html
src/config/: config.py
src/data/: stock_prices.py
src/data/files/: companies_name_to_ticker_symbol.json
src/scrapers/: yahoo_news_scraper.py
src/utils/: action.py  cache.py  data.py  plot_stock_prices.py  sentiment_analyzer.py  time.py
tests/: test_action.py  test_data.py  test_fallback_behavior.py  test_runtime_hardening.py
