[project]
name = "sentify"
version = "1.0.0"
description = "Leveraging Sentiment Analysis on News for Stock Market Insights"
authors = [
    {name = "lifeadventurer", email = "life0adventurer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "flask>=3.1.1",
    "bs4>=0.0.2",
    "yfinance>=0.2.65",
    "pre-commit>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]


[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
